--- a/app/src/main/res/layout/linear_layout.xml
+++ b/app/src/main/res/layout/linear_layout.xml
@@ -10,6 +10,13 @@
     >
 
     <TextView
+        android:id="@+id/name"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textStyle="bold"
+        />
+
+    <TextView
         android:id="@+id/message"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -23,21 +30,33 @@
         android:gravity="right"
         >
         <Button
+            android:id="@+id/reply"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:gravity="center"
+            />
+        <Button
             android:id="@+id/upvote"
-            android:layout_width="20dp"
-            android:layout_height="20dp"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:gravity="center_vertical"
             />
 
         <TextView
             android:id="@+id/votes"
-            android:layout_width="wrap_content"
+            android:layout_width="30dp"
             android:layout_height="fill_parent"
+            android:gravity="center"
+            android:textAlignment="center"
+
             />
 
         <Button
             android:id="@+id/downvote"
-            android:layout_width="20dp"
-            android:layout_height="20dp"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:gravity="center"
+            android:textAlignment="center"
             />
     </LinearLayout>
 </LinearLayout>
